compile code using gulp

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/css/app.css">
+  <link rel="stylesheet" href="dist/css/cube.css">
 </head>
 <body>
 
@@ -11,12 +11,12 @@
     <span class="section-title">Magic cube</span>
     <div class="cube-wrapper">
       <div class="cube" id="cube-1">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -25,12 +25,12 @@
     <span class="section-title">has-shadow</span>
     <div class="cube-wrapper has-shadow">
       <div class="cube" id="cube-2">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -39,12 +39,12 @@
     <span class="section-title">is-floating</span>
     <div class="cube-wrapper has-shadow is-floating">
       <div class="cube" id="cube-3">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -53,12 +53,12 @@
     <span class="section-title">is-transparent</span>
     <div class="cube-wrapper has-shadow is-floating">
       <div class="cube is-transparent" id="cube-4">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -67,12 +67,12 @@
     <span class="section-title">is-rounded</span>
     <div class="cube-wrapper">
       <div class="cube is-rounded" id="cube-5">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -81,12 +81,12 @@
     <span class="section-title">is-perspective</span>
     <div class="cube-wrapper">
       <div class="cube" id="cube-6">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -95,12 +95,12 @@
     <span class="section-title">is-perspective is-rounded</span>
     <div class="cube-wrapper">
       <div class="cube is-rounded" id="cube-7">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -109,12 +109,12 @@
     <span class="section-title">MAGIC</span>
     <div class="cube-wrapper">
       <div class="cube" id="cube-8">
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
@@ -124,17 +124,17 @@
     <div class="cube-wrapper">
       <div class="cube" id="cube-9">
         <div class="cube-light"></div>
-        <div class="cube-top"    style="background-image: url('assets/img/image-01.jpg')"></div>
-        <div class="cube-bottom" style="background-image: url('assets/img/image-02.jpg')"></div>
-        <div class="cube-left"   style="background-image: url('assets/img/image-03.jpg')"></div>
-        <div class="cube-right"  style="background-image: url('assets/img/image-04.jpg')"></div>
-        <div class="cube-front"  style="background-image: url('assets/img/image-05.jpg')"></div>
-        <div class="cube-back"   style="background-image: url('assets/img/image-06.jpg')"></div>
+        <div class="cube-top"    style="background-image: url('src/img/image-01.jpg')"></div>
+        <div class="cube-bottom" style="background-image: url('src/img/image-02.jpg')"></div>
+        <div class="cube-left"   style="background-image: url('src/img/image-03.jpg')"></div>
+        <div class="cube-right"  style="background-image: url('src/img/image-04.jpg')"></div>
+        <div class="cube-front"  style="background-image: url('src/img/image-05.jpg')"></div>
+        <div class="cube-back"   style="background-image: url('src/img/image-06.jpg')"></div>
       </div>
     </div>
   </section>
 
-  <script src="assets/js/script.js"></script>
+  <script src="dist/js/cube.js"></script>
   <script type="text/javascript">
     new Cube('#cube-1');
     new Cube('#cube-2');
